# cdboost-experiments

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cdboost-impl-notes.tex  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  scorecard.yml
docs/: main.tex
vdw14/: CMakeLists.txt  cdcommons_rational_time.hpp  k_counter.hpp  main-tick-counter.cpp  main.cpp  reset_gen.hpp  spec.tex  test_models.cpp  tick_gen.hpp
vdw14/logs/: run-decimal.txt  run-double.txt  run-float.txt  run-mbfp.txt  run-rational.txt  run-rsfp.txt
