cmake_minimum_required(VERSION 3.28)
project(cdboost-experiments VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# cdboost lives as a sibling simulator in the research repo
set(CDBOOST_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../simulators/cdboost"
    CACHE PATH "Path to cdboost source")

if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
    set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake"
        CACHE STRING "")
endif()

set(CDBOOST_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(CDBOOST_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory("${CDBOOST_DIR}" cdboost-build)

add_subdirectory(vdw14)
