cmake_minimum_required(VERSION 3.28)
project(cdboost-experiments VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CDBOOST_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../simulators/cdboost"
    CACHE PATH "Path to cdboost source")

if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
    set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake"
        CACHE STRING "")
endif()

set(CDBOOST_BUILD_TESTS    OFF CACHE BOOL "" FORCE)
set(CDBOOST_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory("${CDBOOST_DIR}" cdboost-build)

# Testing
find_package(Catch2 3 CONFIG REQUIRED)
include(CTest)
enable_testing()

add_subdirectory(vdw14)

# Code Formatting
find_program(CLANG_FORMAT
    NAMES clang-format clang-format-18 clang-format-17 clang-format-16 clang-format-15
    DOC "Path to clang-format executable"
)

if(CLANG_FORMAT)
    file(GLOB_RECURSE EXPERIMENT_FORMAT_FILES
        CONFIGURE_DEPENDS
        "${CMAKE_CURRENT_SOURCE_DIR}/vdw14/*.hpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/vdw14/*.cpp"
    )

    add_custom_target(experiments-format
        COMMAND ${CLANG_FORMAT} -i -style=file ${EXPERIMENT_FORMAT_FILES}
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        COMMENT "Applying clang-format to experiment sources"
        VERBATIM
    )

    add_custom_target(experiments-check-format
        COMMAND ${CLANG_FORMAT} -style=file --dry-run -Werror ${EXPERIMENT_FORMAT_FILES}
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        COMMENT "Checking clang-format compliance"
        VERBATIM
    )
else()
    message(STATUS "clang-format not found; 'format' and 'check-format' targets unavailable")
endif()

# PDF Documentation
find_program(PDFLATEX pdflatex DOC "Path to pdflatex")
if(PDFLATEX)
    set(DOCS_OUTPUT_DIR ${CMAKE_BINARY_DIR}/docs)
    add_custom_target(docs
        COMMAND ${CMAKE_COMMAND} -E make_directory ${DOCS_OUTPUT_DIR}
        COMMAND ${PDFLATEX} -interaction=nonstopmode -output-directory ${DOCS_OUTPUT_DIR} main.tex
        COMMAND ${PDFLATEX} -interaction=nonstopmode -output-directory ${DOCS_OUTPUT_DIR} main.tex
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/docs
        COMMENT "Building PDF documentation -> build/docs/main.pdf"
        VERBATIM
    )
else()
    message(STATUS "pdflatex not found; 'docs' target unavailable")
endif()
